fix menu cropping when there is not enough vertical space

--- a/media/css/m24/components/navigation-refresh.scss
+++ b/media/css/m24/components/navigation-refresh.scss
@@ -280,6 +280,7 @@
                 @media #{$mq-md} {
                     margin-top: 64px;
                     animation: none;
+                    max-height: calc(100vh - 64px);
                 }
             }
         }
